<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ProfileTab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" >
  
                        <TextView
					        android:id="@+id/userNameLabel"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:text="@string/Select_Profile" />
                        
 <!-- select profile -->
                         <Spinner
					        android:id="@+id/profile_selector"
					        style="@android:style/TextAppearance"
					        android:layout_width="match_parent"
					        android:layout_height="50dp" />
                         
                           
 <!-- display current profile settings -->

                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" >

                             <LinearLayout
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="2dp"
                                 android:layout_weight="1"
                                 android:background="@drawable/border"
                                 android:minHeight="50dp"
                                 android:orientation="vertical"
                                 android:padding="20dp" >

                                 <LinearLayout
                                     android:layout_width="wrap_content"
                                     android:layout_height="match_parent"
                                     android:layout_weight="1"
                                     android:orientation="vertical" >

                                     <TextView
                                         android:id="@+id/userName"
                                         android:layout_width="fill_parent"
                                         android:layout_height="wrap_content"
                                         android:text="@string/User_Name" />

                                     <EditText
                                         android:id="@+id/profileTable_name"
                                         android:layout_width="wrap_content"
                                         android:layout_height="0dip"
                                         android:layout_weight="2"
                                         android:ems="10"
                                         android:inputType="text"
                                         android:text="Name here"
                                         android:textAppearance="?android:attr/textAppearanceLarge" >

                                         <requestFocus />
                                     </EditText>
                                 </LinearLayout>

                                 <LinearLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:layout_weight="1"
                                     android:orientation="horizontal" >

                                     <TextView
                                         android:id="@+id/WeightLabel"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_gravity="center"
                                         android:text="@string/Weight" />

                                     <EditText
                                         android:id="@+id/profileTable_weight"
                                         android:layout_width="0dp"
                                         android:layout_height="wrap_content"
                                         android:layout_gravity="center"
                                         android:layout_marginLeft="20dp"
                                         android:layout_weight="2"
                                         android:ems="10"
                                         android:inputType="number"
                                         android:textAppearance="?android:attr/textAppearanceLarge" />
                                 </LinearLayout>

                                 <LinearLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:layout_weight="1"
                                     android:orientation="horizontal" >

                                     <RadioGroup
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_gravity="left|center"
                                         android:layout_weight="1"
                                         android:orientation="vertical" >

                                         <RadioButton
                                             android:id="@+id/profileTable_male"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:layout_gravity="left"
                                             android:checked="true"
                                             android:text="@string/Male" />

                                         <RadioButton
                                             android:id="@+id/profileTable_female"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:layout_gravity="left"
                                             android:text="@string/Female" />
                                     </RadioGroup>

                                     <CheckBox
                                         android:id="@+id/profileTable_smoker"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_gravity="center|right"
                                         android:layout_weight="1"
                                         android:text="@string/Smoker" />
                                 </LinearLayout>

                                 <LinearLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:layout_weight="1"
                                     android:orientation="vertical" >

                                     <TextView
                                         android:id="@+id/TextView03"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:text="@string/Drinking_Frequency" />

                                     <RatingBar
                                         android:id="@+id/profileTable_drinker"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_gravity="left"
                                         android:layout_marginLeft="20dp"
                                         android:numStars="4"
                                         android:stepSize="1.0" />
                                 </LinearLayout>
                             </LinearLayout>

                             <LinearLayout
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:gravity="right|center_vertical"
                                 android:orientation="vertical" >

                                 <Button
                                     android:id="@+id/Save_Profile"
                                     android:layout_width="match_parent"
                                     android:layout_height="40dip"
                                     android:layout_gravity="bottom"
                                     android:text="@string/Save_Profile" />

                                 <Button
                                     android:id="@+id/Delete_Profile"
                                     android:layout_width="match_parent"
                                     android:layout_height="40dip"
                                     android:layout_gravity="bottom"
                                     android:text="@string/Delete_Profile" />
                             </LinearLayout>

                         </LinearLayout>
					    
					    
<!-- add remove buttons -->
                </LinearLayout>
    